Fix [bug992352] - Fixed alignment withing the SignIn/Out block

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -776,6 +776,17 @@ button i.icon-angle-right {
   margin: 0;
   font-weight: bold;
 }
+/* We're logged in - shows everything and aligned */
+#webmaker-nav.loggedin {
+  .user,
+  .user img,
+  .dash,
+  .makes,
+  .login {
+    padding-top: 10px;
+    display: block;
+  }
+}
 .arrow {
   width: 0;
   display: inline-block;
